# SafeConnect-VPN-C-C-version-

./: CMakeLists.txt  README.md
SafeConnect VPN/: CMakeLists.txt  SafeConnect VPN.cpp  SafeConnect VPN.h
SafeConnect VPN/src/vpn-server/: main.c  vpn_manager.c  vpn_manager.h
SafeConnect VPN/src/vpn-server/docs/: README.md
SafeConnect VPN/src/vpn-server/monitoring/: monitoring.c  monitoring.h
SafeConnect VPN/src/vpn-server/traffic-analysis/: traffic_analyzer.c  traffic_analyzer.h
SafeConnect VPN/src/vpn-server/utils/: config_manager.c  config_manager.h  database.c  database.h  logger.c  logger.h  network.c  network.h  report.c  report.h
SafeConnect VPN/src/vpn-server/websocket/: websocket_manager.c  websocket_manager.h
